--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1257,7 +1257,7 @@ some constraint types in $\mathcal{C}_R$ are not only expressible by OWL 2  but 
 \begin{table}
 	\centering
 		\begin{tabular}{l|c|c|c|c|c|c}
-      \textbf{Constraint Class} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\		
+      \textbf{Expressivity Class} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\		
       \hline
       $Expr(\overline{\mathcal{C}_R})$ (42) & 6 & 18(4) & 7(4) & 8 & 12 & 41(1)\\
       $Expr(\mathcal{C}_R)$ (32) & 8 & 29 & 11 & 11(2) & 11(1) & 32 \\ 	
@@ -1268,8 +1268,8 @@ some constraint types in $\mathcal{C}_R$ are not only expressible by OWL 2  but 
 %\end{center}
 %\tb{this is indeed a misunderstanding. I only took into account that is DSP supports 6 EXPR-C constraints and OWL 2 DL 5, then DSP is more expressive than OWL 2 DL regarding the expressivity class EXPR-C / but this is not right?}
 
-In table \ref{tab:constraint-type-specific-expressivity}, the total amount of constraints per constraint type is shown by numbers in round brackets in the first column.
-Numbers in round brackets in the other columns indicate the number of constraints which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
+In table \ref{tab:constraint-type-specific-expressivity}, the total amount of constraint types per constraint type specific expressivity is shown by numbers in round brackets in the first column.
+Numbers in round brackets in the other columns indicate the number of constraint types which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
 %\er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
 The total orderings derived from expressivity scores are:
 \begin{eqnarray*}
@@ -1277,16 +1277,12 @@ The total orderings derived from expressivity scores are:
 Expr(\overline{\mathcal{C}_R}): DSP \prec OWL2QL \prec ReSh \prec ShEx \prec OWL2DL \prec SPIN \\
 Expr(\mathcal{C}_R): DSP \prec OWL2QL \prec ShEx \prec ReSh \prec OWL2DL \prec SPIN
 \end{eqnarray*}
-It depends on the individual use case which constraint language to use in order to fulfil related requirements, i.e., to express associated constraints.
-If, e.g., many constraint types (requirements) in $\mathcal{C_R}$ are needed, the constraint language SPIN is the most expressive one.
+It depends on the individual use case which constraint language to use in order to fulfill related requirements, i.e., to express associated constraint types.
+If, e.g., many constraint types in $\mathcal{C_R}$ are needed, the constraint language SPIN is the most expressive one.
 If, on the other hand, only specific requirements in $\overline{\mathcal{C_R}}$ or $\mathcal{C_R}$ are needed, 
-it can be more reasonable to use a compact one.
+it can be more reasonable to use a more compact one like ShEx.
 
-
-
-
-
-For a validation labourer, it is relevant to question the expressivity interrelation between those constraint languages e.g., "which constraint language could contain the whole DSP or  could be used instead?". This can also maintain the future development plans and directions of those languages in the way of achieving to be a solid standard constraint language.
+For a validation labourer, it is relevant to question the expressivity interrelation between those constraint languages, e.g., "which constraint language could contain the whole DSP or  could be used instead?". This can also maintain the future development plans and directions of those languages in the way of achieving to be a solid standard constraint language.
 
  With the aforementioned concern, let us introduce  \emph{Expr(DSP)}  which denotes the all constraint types which are expressible by DSP.  We can consider \emph{Expr(DSP)} as an expressivity class for the constraint language DSP. Using the same fashion, one can obtain an expressivity class  per constraint language, including all the constraints expressible by that constraint language.
 %\begin{itemize}
@@ -1297,7 +1293,7 @@ For a validation labourer, it is relevant to question the expressivity interrela
 	%\item \emph{Expr(ShEx)}: constraints expressible by ShEx
 	%\item \emph{Expr(SPIN)}: constraints expressible by SPIN
 %\end{itemize}
-Table \ref{tab:expressivity-sores} shows the expressivity scores of languages according to expressivity classes again defined by those languages:
+Table \ref{tab:expressivity-sores-according-to-expressivity-classes} shows the expressivity scores of languages according to expressivity classes again defined by those languages:
 %\begin{center}
 %\begin{evaluation}
 %\emph{Expr(DSP)} (14) & 14 & 13 & 1 & 7(6) & 13 & 13(1) \\
@@ -1311,7 +1307,7 @@ Table \ref{tab:expressivity-sores} shows the expressivity scores of languages ac
 \begin{table}
 	\centering
 		\begin{tabular}{l|c|c|c|c|c|c}
-      \textbf{Constraint Class} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\		
+      \textbf{Expressivity Class} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\		
       \hline
 			\emph{Expr(DSP)} (14) & 14 & 13 & 1 & 7(6) & 13 & 13(1) \\
 			\emph{Expr(OWL2DL)} (49) & 13 & 49 & 16(1) & 9(9) & 13(1) & 48(1) \\
@@ -1320,8 +1316,8 @@ Table \ref{tab:expressivity-sores} shows the expressivity scores of languages ac
 			\emph{Expr(ShEx)} (23) & 13 & 19(2) & 2(1) & 11(7) & 23 & 22(1) \\
 			\emph{Expr(SPIN)} (73) & 13 & 50(4) & 15(4) & 12(9) & 23(1) & 73 \\
 		\end{tabular}
-	\caption{Expressivity Scores}
-	\label{tab:expressivity-sores}
+	\caption{Expressivity Scores according to Expressivity Classes}
+	\label{tab:expressivity-sores-according-to-expressivity-classes}
 \end{table}
 
 If we rank them according their scores, just as before we get the following as a brief picture:
@@ -1334,7 +1330,7 @@ If we rank them according their scores, just as before we get the following as a
 \emph{Expr(SPIN):} ReSh \prec DSP \prec OWL2QL \prec ShEx \prec OWL2DL \prec SPIN
 \end{eqnarray*}
 
-From the table given above (with numbers), one can infer that in terms of expressivity on constraints, DSP can be fully covered by SPIN if we ignore one last constraint type (i.e., the recursive queries which is partly implemented in SPIN)\er{citation needed}. Yet another interesting message is that, none of those languages with mediocre expressivity covers the other so far. As we keep the validation requirements updated and those languages are further developed, it is likely that this list will change as well in the direction of needs of the validation community.
+From table \ref{tab:expressivity-sores-according-to-expressivity-classes} (with numbers), one can infer that in terms of expressivity on constraint types, DSP can be fully covered by SPIN if we ignore one last constraint type (i.e., the recursive queries which is partly implemented in SPIN)\er{citation needed}. Yet another interesting message is that, none of those languages with mediocre expressivity covers the other so far. As we keep the validation requirements updated and those languages are further developed, it is likely that this list will change as well in the direction of needs of the validation community.
 
 %\subsection{Classification Dimension Expressivity [Old]}
 %
