--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -654,16 +654,17 @@ OWL 2 is an expressive semantic web language which is based on description logic
 This has lead to claims that OWL 2 cannot be used for validation. 
 There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
-\tb{we need a research domain example here}
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
+\tb{does this new example suit our needs?}
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ author.Person}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
  &(\ms{funct (title)}),\\
  &\ms{Book(Huckleberry-Finn)},\\
+ &\ms{author(Huckleberry-Finn, Mark-Twain)},\\
  &\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}\\
- &\ms{title(Huckleberry-Finn, Die-Abenteuer-von-Huckleberry-Finn)},\\ 
+ &\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)},\\ 
 \end{DL}
 \end{center}
 
@@ -681,7 +682,9 @@ $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
 \end{DL}
 \end{center}
 
-The statement \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon } says \emph{Jedis can have only Jediweapon}. Furthermore, we know that Luke is a Jedi  (i.e., \ms{Jedi(Luke)}) and \emph{Luke has the weapon laser sword} (\ms{hasWeapon(Luke, LaserSword)}.  However,  if a laser sword is not explicitly defined to be a Jedi weapon (e.g., \ms{Jediweapon(LaserSword)}), it causes a constraint violation.
+The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
+Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and \emph{Luke has the weapon laser sword} (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
+However,  if a laser sword is not explicitly defined to be a Jedi weapon (e.g., \ms{Jediweapon(LaserSword)}), it causes a constraint violation.
 If we express the mentioned constraints in OWL
 and apply a reasoner before the proper validation is performed, we will not get a constraint violation as implicit triples such as \emph{laser sword is a Jedi weapon} (i.e., \ms{JediWeapon(LaserSword)}) will be inferred. 
 
