--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -659,7 +659,7 @@ RDF documents follow the structure of RDFS/OWL ontologies which can therefore be
 \tb{does this new example suit our needs?}
 \begin{center}
 \begin{DL} 
-$\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ author.Person}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
+$\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
  &(\ms{funct (title)}),\\
  &\ms{Book(Huckleberry-Finn)},\\
  &\ms{author(Huckleberry-Finn, Mark-Twain)},\\
@@ -683,17 +683,17 @@ $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
 \end{center}
 
 The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
-Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and \emph{Luke has the weapon laser sword} (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
-However,  if a laser sword is not explicitly defined to be a Jedi weapon (e.g., \ms{Jediweapon(LaserSword)}), it causes a constraint violation.
+Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
+However, as Mark Twain is not explicitly defined to be a person (e.g., \ms{Person(Mark-Twain)}), it causes a constraint violation.
 If we express the mentioned constraints in OWL
-and apply a reasoner before the proper validation is performed, we will not get a constraint violation as implicit triples such as \emph{laser sword is a Jedi weapon} (i.e., \ms{JediWeapon(LaserSword)}) will be inferred. 
+and apply a reasoner before the proper validation is performed, we will not get a constraint violation as implicit triples such as \emph{Mark Twain is a person} (i.e., \ms{Person(Mark-Twain)}) will be inferred. 
 
 %\subsection{CWA vs. OWA in RDF Validation}
 
 OWL is based on the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption (UNA)}). 
 This ambiguity in semantics is one of the main reasons why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
 OWL's semantics is also based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. 
-In an OWA setting, in the given knowledge base above, we infer that $\ms{Anakin}$ has an ancestor that is a $\ms{Person}$ (since Anakin is a person e.g.,\ms{Person(Anakin)}), but we do not know who exactly, and $\mathcal{K}$ is consistent. \tb{k is consistent does not fit into the text flow}
+In an OWA setting, in the given knowledge base above, we infer that {\em Huckleberry-Finn} has a title (since {\em Huckleberry-Finn} is a book e.g.,\ms{Book(Huckleberry-Finn)}), but we do not know which exactly, and $\mathcal{K}$ is consistent. \tb{k is consistent does not fit into the text flow}
 
 On the other hand, many RDF validation scenarios require the {\em closed-world assumption (CWA)} (i.e., a statement is inferred to be false if it cannot be proved to be true).
 Hence, classical constraint languages are based on CWA where constraints need to be satisfied only by named individuals which yields in return to a constraint violation. This would be a shortcoming of OWA in RDF validation. \tb{needs further explanation}
