--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -655,7 +655,8 @@ This has lead to claims that OWL 2 cannot be used for validation.
 There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
-RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
+RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. \tb{explain why this reduces redundancy}
+Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
 \tb{does this new example suit our needs?}
 \begin{center}
 \begin{DL} 
@@ -663,32 +664,33 @@ $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsu
  &(\ms{funct (title)}),\\
  &\ms{Book(Huckleberry-Finn)},\\
  &\ms{author(Huckleberry-Finn, Mark-Twain)},\\
- &\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}\\
- &\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)},\\ 
+ &\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)},\\
+ &\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}\\ 
 \end{DL}
 \end{center}
 
-\begin{center}
-\begin{DL} 
-$\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
-  & \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon }\\
-  & \ms{Jedi $\sqsubseteq$ Person} \\
- &(\ms{funct (hasAncestor)}),\\
- &\ms{Person(Anakin)},\\
- &\ms{Jedi(Luke)},\\
- &\ms{hasWeapon(Luke, LaserSword)}\\
- &\ms{hasAncestor(Luke, Anakin)},\\ 
- &\ms{hasAncestor(Luke, Shmi)}$\}$
-\end{DL}
-\end{center}
+%\begin{center}
+%\begin{DL} 
+%$\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
+  %& \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon }\\
+  %& \ms{Jedi $\sqsubseteq$ Person} \\
+ %&(\ms{funct (hasAncestor)}),\\
+ %&\ms{Person(Anakin)},\\
+ %&\ms{Jedi(Luke)},\\
+ %&\ms{hasWeapon(Luke, LaserSword)}\\
+ %&\ms{hasAncestor(Luke, Anakin)},\\ 
+ %&\ms{hasAncestor(Luke, Shmi)}$\}$
+%\end{DL}
+%\end{center}
 
-The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
-Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
-However, as Mark Twain is not explicitly defined to be a person (e.g., \ms{Person(Mark-Twain)}), it causes a constraint violation.
-If we express the mentioned constraints in OWL
-and apply a reasoner before the proper validation is performed, we will not get a constraint violation as implicit triples such as \emph{Mark Twain is a person} (i.e., \ms{Person(Mark-Twain)}) will be inferred. 
-
-%\subsection{CWA vs. OWA in RDF Validation}
+As we know that \emph{books can only have persons as authors} (\ms{Book $\sqsubseteq \forall$ author.Person}), 
+{\em Huckleberry-Finn} is a book  (\ms{Book(Huckleberry-Finn)}), 
+and Mark Twain is its author (\ms{author(Huckleberry-Finn, Mark-Twain)},
+we conclude that Mark Twain must be a person.
+%The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
+%Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
+As Mark Twain is not explicitly defined to be a person, however, a constraint violation is raised.
+But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} will be inferred. 
 
 OWL is based on the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption (UNA)}). 
 This ambiguity in semantics is one of the main reasons why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
@@ -994,7 +996,6 @@ as each publication can only have \ms{author} relationships to persons.
 
 For the majority of the constraint types, reasoning is not needed to be performed prior to validation. 
 It is possible, however, to reason before validating constraints for which reasoning does not affect validation results.
-
 %\textbf{Expressible by OWL 2.}
 %\label{sec:RDF-validation-requirements-without-reasoning-2}
 %\textbf{Literal Pattern Matching}\footnote{corresponds to R-44-PATTERN-MATCHING-ON-RDF-LITERALS}\textbf{.} 
@@ -1056,7 +1057,6 @@ It is possible, however, to reason before validating constraints for which reaso
 %
 %Data containing the triples \ms{Yoda a Jedi ; laserSwordColor 'blue'} is valid, 
 %whereas data including the triples \ms{DarthMaul a Jedi ; laserSwordColor 'red'} is invalid.
-
 With the constraint type {\em Context-Specific Exclusive OR of Properties}\footnote{Corresponds to {\em R-11-CONTEXT-SPECIFIC-EXCLUSIVE-OR-OF-PROPERTIES}} 
 it can be defined that an individual can either have a relationship via property A or via property B to given classes, but not both.
 Identifiers of publications, e.g., are either ISBNs (for books) or ISSNs (for periodical publications), but it should not be possible to assign both identifiers to a publication:
@@ -1599,9 +1599,13 @@ They examined integrity constraint semantics proposed in the deductive databases
 by reducing the validation of integrity constraints to SPARQL query answering by means of reasoners.
 This OWL semantics, however, was never submitted to a standards organization such as the W3C.
 
-In description logics, reasoning tasks like query answering or detection of inconsistencies require the consideration of knowledge that is not only defined explicitly but also implicitly. To do so there are two different ways called forward- and backward-chaining. The first implies a materialized knowledge base, where the original knowledge base is extended by all assertions that can be inferred. State-of-the-art DL or OWL reasoners that following this approach are e.g. FaCT++ \cite{tsarkov2006fact++}, Pellet \cite{sirin2007pellet},  RacerPro \cite{haarslev2001racer}, or HermiT \cite{horrocks2012hermit}. On the second approach, the original knowledge base is kept in its original state and before queries are evaluated against the knowledge base, the queries will be rewritten such that its rewritings will consider also the implicit knowledge in the returned result set. Approaches following this way are e.g., \textsf{PerfectRef} given by Calvanese et al. \cite{Calvanese2007} or \textsf{TreeWitness} proposed by Kontchakov et al. \cite{kontchakov2011combined}, which are both implemented in the --ontop-- framework\footnote{\url{http://ontop.inf.unibz.it}} for ontology-based data access. The choice between these two different ways depends on the specific application case. So the first kind is probably applied on local knowledge bases whereas the second is more appropriated for federative environments like in \cite{nolle2014efficient,nolle2013elite}. So even if reasoning is performed by query rewriting in terms of backward-chaining and constraint validation queries are evaluated through such an engine, rewritings will only be generated if possible and will not affect constraint validation that are checked e.g. by pattern matching.
+In description logics, reasoning tasks like query answering or detection of inconsistencies require the consideration of knowledge that is not only defined explicitly but also implicitly. To do so there are two different ways called forward- and backward-chaining. The first implies a materialized knowledge base, where the original knowledge base is extended by all assertions that can be inferred. State-of-the-art DL or OWL reasoners that following this approach are e.g. FaCT++ \cite{tsarkov2006fact++}, Pellet \cite{sirin2007pellet},  RacerPro \cite{haarslev2001racer}, or HermiT \cite{horrocks2012hermit}. On the second approach, the original knowledge base is kept in its original state and before queries are evaluated against the knowledge base, the queries will be rewritten such that its rewritings will consider also the implicit knowledge in the returned result set. Approaches following this way are e.g., \textsf{PerfectRef} given by Calvanese et al. \cite{Calvanese2007} or \textsf{TreeWitness} proposed by Kontchakov et al. \cite{kontchakov2011combined}, which are both implemented in the --ontop-- framework\footnote{\url{http://ontop.inf.unibz.it}} for ontology-based data access. The choice between these two different ways depends on the specific application case. So the first kind is probably applied on local knowledge bases whereas the second is more appropriated for federative environments like in \cite{nolle2014efficient,nolle2013elite}. 
+So, even if reasoning is performed by query rewriting in terms of backward-chaining and constraint validation queries are evaluated through such an engine, rewritings will only be generated if possible and will not affect constraint validation that are checked e.g. by pattern matching.
 
-\tb{2 papers, see following latex comments}
+
+% additional papers
+% -----
+
 %Axel Polleres, Cristina Feier, and Andreas Harth. Rules with
 %contextually scoped negation. In Proceedings of the 3rd European
 %Semantic Web Conference (ESWC2006), volume 4011 of Lecture Notes in
