--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -655,13 +655,13 @@ This has lead to claims that OWL 2 cannot be used for validation.
 There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
-RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. \tb{explain why this reduces redundancy}
+RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy.
 Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
  &(\ms{funct (title)}),\\
- &\ms{Book(Huckleberry-Finn)},\\
+ &\ms{Book(Huckleberry-Finn)}, \ms{Book(Hamlet)}\\
  &\ms{author(Huckleberry-Finn, Mark-Twain)},\\
  &\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)},\\
  &\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}\\ 
@@ -694,8 +694,8 @@ But if we apply a reasoner before validating, this constraint violation is resol
 OWL is based on the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption (UNA)}). 
 This ambiguity in semantics is one of the main reasons why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
 OWL's semantics is also based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. 
-As each book must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and as {\em Huckleberry-Finn} is a book (\ms{Book(Huckleberry-Finn)}),
-the book {\em Huckleberry-Finn} must have at least one title.
+As each book must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and as {\em Hamlet} is a book (\ms{Book(Hamlet)}),
+the book {\em Hamlet} must have at least one title.
 In an OWA setting, this axiom does not cause a constraint violation (even if there is no explicitly defined title), since there must be a title for this book which we may not know ($\mathcal{K}$ is consistent). 
 
 On the other hand, many RDF validation scenarios require the {\em closed-world assumption (CWA)} (i.e., a statement is inferred to be false if it cannot be proved to be true).
