arxiv article citation

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -216,11 +216,14 @@
   Timestamp                = {2014.11.08}
 }
 
-@TechReport{BoschNolleAcarEckert2015,
-  Title                    = {RDF Validation Requirements},
+@Article{BoschNolleAcarEckert2015,
+  Title                    = {RDF Validation Requirements - Evaluation and Logical Underpinning},
   Author                   = {Bosch, Thomas and Nolle, Andreas and Acar, Erman and Eckert, Kai},
   Year                     = {2015},
 
+  Eprint                   = {cs/1501.03933},
+  Eprintclass              = {cs.LO},
+  Eprinttype               = {arxiv},
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.12.17}
 }
